--- a/ts-lambda/package.json
+++ b/ts-lambda/package.json
@@ -11,11 +11,13 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.10",
+    "@aws-cdk/assert": "^2.13.0",
+    "@aws-cdk/core": "^1.145.0",
+    "@types/jest": "^27.1.3",
     "@types/node": "10.17.27",
-    "jest": "^27.2.5",
-    "ts-jest": "^26.2.0",
     "aws-cdk": "2.13.0",
+    "jest": "^27.2.5",
+    "ts-jest": "^27.1.3",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
